@@ -1,7 +1,7 @@
 Package: bayNorm
 Type: Package
 Title: Single-cell RNA sequencing data normalization
-Version: 1.5.3
+Version: 1.5.4
 Authors@R: c(person("Wenhao", "Tang", role=c("aut", "cre"),
         email="wt215@ic.ac.uk"), 
         person("Fran<U+00E7>ois", "Bertaux", role=c("aut")),
@@ -22,6 +22,7 @@ Imports:
     foreach, 
     iterators,
     doSNOW,
+    Matrix,
     parallel,
     MASS,
     locfit,
