@@ -12,6 +12,7 @@ export(SyntheticControl)
 export(bayNorm)
 export(bayNorm_sup)
 export(noisy_gene_detection)
+export(t_sp)
 import(BiocParallel)
 import(MASS)
 import(doSNOW)
@@ -25,6 +26,8 @@ import(methods)
 import(parallel)
 import(stats)
 import(utils)
+importFrom(Matrix,colSums)
+importFrom(Matrix,rowMeans)
 importFrom(Rcpp,sourceCpp)
 importFrom(SingleCellExperiment,SingleCellExperiment)
 importFrom(SummarizedExperiment,SummarizedExperiment)
